--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vonage/server-sdk": "^2.11.2",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "concurrently": "^7.3.0",
@@ -23,6 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.19"
+    "nodemailer": "^6.7.8",
+    "nodemon": "^2.0.19",
+    "react-icons": "^4.4.0"
   }
 }
